# a-n-plus-b

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_STYLE.md  CONTRIBUTING.md  LICENSE.txt  PROJECT_STRUCTURE.md  README.md  pyproject.toml  tox.ini
.devcontainer/: devcontainer.json
.github/: dependabot.yaml
.github/workflows/: release.yaml  test.yaml
src/a_n_plus_b/: __init__.py  _a_n_plus_b.py  _grammar.py  _n.py
tests/: __init__.py  test_alternate_constructors.py  test_indices.py  test_n_and_math.py  test_other_methods.py
