[project]
name = "a-n-plus-b"
version = "0.2.0"
description = "CSS <An+B> microsyntax parser"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["CSS", "parser", "an+b"]
authors = [
	{ name = "InSyncWithFoo", email = "insyncwithfoo@gmail.com" }
]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Developers",
	"Topic :: Software Development :: Build Tools",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: Implementation :: CPython",
	"Typing :: Typed"
]

dependencies = [
	"regex~=2023.12.25; python_version<='3.10'"
]

[project.optional-dependencies]
dev = [
	"hatch>=1.9.3,<1.13.0",
	"hypothesis>=6.105.0,<6.113",
	"mypy>=1.8,<1.12",
	"pyright~=1.1.347",
	"pytest>=8.0,<8.4",
	"pytest-cov>=4.1,<5.1",
	"ruff>=0.5.0,<0.7",
	"tox>=4.16.0,<4.21.0",
	"tzdata>=2023.4,<2025.0"
]

[project.urls]
"Homepage" = "https://github.com/InSyncWithFoo/a-n-plus-b"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.pytest.ini_options]
addopts = "--strict-markers --cov=a_n_plus_b --cov-report=html"
testpaths = ["tests"]

[tool.coverage.report]
exclude_lines = [
	"^([^\\S\n]+)@(?:overload|abstractmethod)",
	"if TYPE_CHECKING:",
	"if sys\\.version",
	"def __repr__"
]

[tool.mypy]
files = "src/**/*.py"
strict = true

[tool.pyright]
include = ["src"]
strict = ["src"]
pythonPlatform = "All"
typeCheckingMode = "strict"

[tool.ruff]
include = ["src/**.py"]
exclude = ["tests/**.py"]
line-length = 80
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
	"ANN101",    # missing-type-self
	"ANN102",    # missing-type-cls
	
	"COM812",    # missing-trailing-comma
	
	"D200",      # fits-on-one-line
	"D202",      # no-blank-line-after-function
	"D203",      # one-blank-line-before-class
	"D205",      # blank-line-after-summary
	"D206",      # indent-with-spaces
	"D212",      # multi-line-summary-first-line
	"D300",      # triple-single-quotes
	"D401",      # non-imperative-mood
	
	"ERA001",    # commented-out-code
	
	"I001",      # unsorted-imports
	
	"N818",      # error-suffix-on-exception-name
	
	"PIE790",    # unnecessary-placeholder
	
	"Q000",      # bad-quotes-inline-string
	"Q001",      # bad-quotes-multiline-string
	"Q002",      # bad-quotes-docstring
	
	"W191",      # tab-indentation
	"W291",      # trailing-whitespace
	"W293",      # blank-line-with-whitespace
	
	"SLF001"     # private-member-access
]
